--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,13 +2,11 @@ name: Deploy Vite to GitHub Pages
 
 on:
   push:
-    branches: ["main"]  # Deploy when pushing to main branch
-  workflow_dispatch:     # Allow manual trigger from GitHub UI
+    branches: ["main"]
+  workflow_dispatch:
 
 permissions:
-  contents: write        # Needed to push to gh-pages branch
-  pages: write
-  id-token: write
+  contents: write
 
 jobs:
   build-and-deploy:
@@ -21,15 +19,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 20
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build project
         run: npm run build
 
-      # Upload build output (Vite outputs to dist/)
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
