--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Deploy Vite to GitHub Pages
+name: Build and Deploy Vite to GitHub Pages
 
 on:
   push:
@@ -7,11 +7,16 @@ on:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
 
 jobs:
-  build-and-deploy:
+  # 🏗️ 1) Build Job
+  build:
+    name: Build Project
     runs-on: ubuntu-latest
-
+    outputs:
+      build-folder: dist
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -26,6 +31,24 @@ jobs:
 
       - name: Build project
         run: npm run build
+
+      - name: Upload production files
+        uses: actions/upload-artifact@v4
+        with:
+          name: vite-dist
+          path: ./dist
+
+  # 🚀 2) Deploy Job
+  deploy:
+    name: Deploy to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download built files
+        uses: actions/download-artifact@v4
+        with:
+          name: vite-dist
+          path: dist
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
